k8s/apps/meow/qbittorrent/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: torrents
              mountPath: /downloads
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 512Mi
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: torrents
          persistentVolumeClaim:
            claimName: torrents
