k8s/apps/meow/qbittorrent/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - name: udp
      port: 6881
      nodePort: 30103
      protocol: TCP
    - name: udp
      port: 6881
      nodePort: 30103
      protocol: UDP
