k8s/apps/meow/qbittorrent/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`torrents.meow.litarvan.com`)
      services:
        - name: qbittorrent
          port: http
