k8s/apps/meow/qbittorrent/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: torrents.meow.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
  tls:
    - hosts:
        - torrents.meow.litarvan.dev
      secretName: torrents-meow-tls
